@@ -187,47 +187,47 @@ class FacettingHelperTest(TestCase):
         # so let's select one...
         params = lambda query: sorted(map(unquote, query.split('&')))
         info = lambda: [(i['title'], params(i['query'])) for i in selected()]
-        request.form['fq'] = 'foo:xy'
+        request.form['fq'] = 'foo:"xy"'
         self.assertEqual(info(), [
             ('foo', ['facet.field=foo']),
         ])
         # and then some more...
-        request.form['fq'] = ['foo:x', 'bar:y']
+        request.form['fq'] = ['foo:"x"', 'bar:"y"']
         self.assertEqual(info(), [
-            ('foo', ['facet.field=foo', 'fq=bar:y']),
-            ('bar', ['facet.field=bar', 'fq=foo:x']),
+            ('foo', ['facet.field=foo', 'fq=bar:"y"']),
+            ('bar', ['facet.field=bar', 'fq=foo:"x"']),
         ])
-        request.form['fq'] = ['foo:x', 'bar:y', 'bah:z']
+        request.form['fq'] = ['foo:"x"', 'bar:"y"', 'bah:"z"']
         self.assertEqual(info(), [
-            ('foo', ['facet.field=foo', 'fq=bah:z', 'fq=bar:y']),
-            ('bar', ['facet.field=bar', 'fq=bah:z', 'fq=foo:x']),
-            ('bah', ['facet.field=bah', 'fq=bar:y', 'fq=foo:x']),
+            ('foo', ['facet.field=foo', 'fq=bah:"z"', 'fq=bar:"y"']),
+            ('bar', ['facet.field=bar', 'fq=bah:"z"', 'fq=foo:"x"']),
+            ('bah', ['facet.field=bah', 'fq=bar:"y"', 'fq=foo:"x"']),
         ])
         # extra parameter should be left untouched
         request.form['foo'] = 'bar'
         self.assertEqual(info(), [
-            ('foo', ['facet.field=foo', 'foo=bar', 'fq=bah:z', 'fq=bar:y']),
-            ('bar', ['facet.field=bar', 'foo=bar', 'fq=bah:z', 'fq=foo:x']),
-            ('bah', ['facet.field=bah', 'foo=bar', 'fq=bar:y', 'fq=foo:x']),
+            ('foo', ['facet.field=foo', 'foo=bar', 'fq=bah:"z"', 'fq=bar:"y"']),
+            ('bar', ['facet.field=bar', 'foo=bar', 'fq=bah:"z"', 'fq=foo:"x"']),
+            ('bah', ['facet.field=bah', 'foo=bar', 'fq=bar:"y"', 'fq=foo:"x"']),
         ])
         # an existing 'facet.field' parameter should be preserved
         del request.form['foo']
         request.form['facet.field'] = 'x'
         self.assertEqual(info(), [
-            ('foo', ['facet.field=foo', 'facet.field=x', 'fq=bah:z', 'fq=bar:y']),
-            ('bar', ['facet.field=bar', 'facet.field=x', 'fq=bah:z', 'fq=foo:x']),
-            ('bah', ['facet.field=bah', 'facet.field=x', 'fq=bar:y', 'fq=foo:x']),
+            ('foo', ['facet.field=foo', 'facet.field=x', 'fq=bah:"z"', 'fq=bar:"y"']),
+            ('bar', ['facet.field=bar', 'facet.field=x', 'fq=bah:"z"', 'fq=foo:"x"']),
+            ('bah', ['facet.field=bah', 'facet.field=x', 'fq=bar:"y"', 'fq=foo:"x"']),
         ])
 
     def testSelectedFacetValues(self):
         request = TestRequest()
         selected = SearchFacetsView(Dummy(), request).selected
         info = lambda: [(i['title'], i['value']) for i in selected()]
-        request.form['fq'] = 'foo:xy'
+        request.form['fq'] = 'foo:"xy"'
         self.assertEqual(info(), [('foo', 'xy')])
-        request.form['fq'] = ['foo:x', 'bar:y']
+        request.form['fq'] = ['foo:"x"', 'bar:"y"']
         self.assertEqual(info(), [('foo', 'x'), ('bar', 'y')])
-        request.form['fq'] = ['foo:x', 'bar:y', 'bah:z']
+        request.form['fq'] = ['foo:"x"', 'bar:"y"', 'bah:"z"']
         self.assertEqual(info(), [('foo', 'x'), ('bar', 'y'), ('bah', 'z')])
 
     def testEmptyFacetField(self):
